--- a/src/components/Wallet/Transfer/Transfer.module.scss
+++ b/src/components/Wallet/Transfer/Transfer.module.scss
@@ -37,6 +37,10 @@
     .wrapper {
         flex-direction: column;
         height: auto;
+
+        .tab {
+            overflow-y: visible;
+        }
     }
 }
 
